# hma-gamecalls-engine

./: .clang-format  .clang-tidy  .code-workspace  .dockerignore  .editorconfig  .gitignore  .gitmodules  BUILD_DEBUG_CHECKLIST.md  CMakeLists-OLD.txt  CMakeLists.txt  CMakeLists_wasm.txt  CMakePresets.json  CODEOWNERS  COMMIT_READINESS_REPORT.md  COMMIT_SUMMARY.md  COMMIT_SUMMARY_CURRENT.md  CONTRIBUTING.md  CrossPlatformTest  DEBUGGING.md  DEPLOYMENT.md  DISABLED_TESTS_ANALYSIS.md  DTWUnifiedTest  Dev_Progress.md  Dockerfile.dev  Dockerfile.testing  Doxyfile  Doxyfile.bak  EndToEndTest  FeatureImplementationGuide.md  LICENSE  MFCCConsistencyUnifiedTest  MFCCDirectUnifiedTest  MVP_Feature_Gap_Analysis.md  MVP_PROGRESS_REPORT.md  PHASE3_3_COMPLETION_REPORT.md  PROJECT_CLEANUP_PLAN.md  PROJECT_COMPLETE.md  PROJECT_ORGANIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  PerformanceTest  (+128 more)
libs/kissfft_minimal/: CMakeLists.txt
src/: AudioPlayer.cpp  AudioRecorder.cpp  CMakeLists.txt  DTWProcessor.cpp  HuntmasterAudioEngine.cpp  MFCCProcessor.cpp  ThirdPartyLibs.cpp  WASMInterface.cpp
src/core/: AdvancedIOOptimizer.cpp  AudioBufferPool.cpp  AudioFormatConverter.cpp  AudioLevelProcessor.cpp  AudioPlayer.cpp  AudioRecorder.cpp  CadenceAnalyzer.cpp  CircularAudioBuffer.cpp  ComponentErrorHandler.cpp  DTWComparator.cpp  DTWProcessor.cpp  DebugLogger.cpp  ErrorLogger.cpp  ErrorMonitor.cpp  HarmonicAnalyzer.cpp  HuntmasterAudioEngine.cpp  HuntmasterEngine.cpp  MFCCProcessor.cpp  OptimizedAudioIO.cpp  OptimizedAudioRecorder.cpp  PerformanceProfiler.cpp  PitchTracker.cpp  QualityAssessor.cpp  RealTimeAudioProcessor.cpp  RealtimeScorer.cpp  SessionManager.cpp  SpectrogramProcessor.cpp  StreamingAudioProcessor.cpp  StreamingAudioProcessor.h  ThirdPartyLibs.cpp  UnifiedAudioEngine.cpp  VoiceActivityDetector.cpp  WaveformGenerator.cpp
src/enhanced/: EnhancedAnalysisProcessor.cpp
src/old/: arc_HuntmasterAudioEngine.cpp  arc_MFCCProcessor.cpp  arc_WASMInterface.cpp
src/platform/wasm/: EnhancedWASMInterface.cpp  WASMInterface.cpp  WASMInterface_old.cpp
src/profiling/: PerformanceProfiler.cpp
src/security/: access-controller.cpp  audit-logger.cpp  crypto-manager.cpp  input-validator.cpp  memory-guard.cpp  memory-protection.cpp
src/visualization/: WaveformAnalyzer.cpp  WaveformAnalyzer.cpp.backup
tests/: CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt.broken  CMakeLists.txt.new  CMakeLists.txt.old  MemoryProtectionComprehensiveTest.cpp  RunEngineTests[1]_include.cmake  binary_compatibility_tests.cpp  dtw_tests.cpp  engine_tests.cpp  generate_test_audio.py  mfcc_tests.cpp  run_advanced_test.cpp  test_coverage_validator.cpp  test_error_logging_system.cpp  test_harness.cpp  test_recorder.cpp  test_vad_manual.cpp  test_validation.cpp  tests_no_diag_compile_only.cpp
tests/acceptance/abtesting/: abtesting-framework-modular.js  experiment-manager.js  results-dashboard.js  statistical-analyzer.js  variant-controller.js
tests/acceptance/analytics/: analytics-collector-modular.js  data-collector.js
tests/acceptance/integration/: api-integration.js  end-to-end-testing.js  module-integration.js
tests/acceptance/qa/: accessibility-testing.js  cross-browser-testing.js  (+2 more)
tests/benchmarks/: CMakeLists.txt  RealtimeAudioProcessorBenchmark.cpp  RunBenchmarks
tests/core/: test_AdvancedIOOptimizer.cpp
tests/integration/: EndToEndTest.cpp  LoadandExtractTest.cpp  README.md  RealWildlifeCallAnalysisTest.cpp  test_audio_pipeline.cpp  test_wasm_integration.cpp.disabled
tests/lib/: TestUtils.cpp  TestUtils.h  TestUtils_old.h
tests/performance-security/: PerformanceMonitor.js  SecurityManager.cpp
tests/standalone/: test_algorithm_functionality.cpp  test_cadence  test_cadence_analysis.cpp  test_enhanced_analyzers.cpp  test_enhanced_headers.cpp  test_enhanced_integration.cpp  test_harmonic  test_phase1_validation.cpp  test_yin  test_yin_algorithm.cpp
tests/tools/: run_advanced_test.cpp  test_alpha_deployment_ready.cpp  test_mfcc_debugging.cpp
tests/unit/: AudioBufferPoolTest.cpp  DTWComparatorTest.cpp  DebugTest.cpp  EnergyComparisonTest.cpp  RealTimeAudioProcessorTest.cpp  SimpleVADTest.cpp  StateMachineTest.cpp  TestAudioBuffer.h  VADActiveTransitionTest.cpp  VADCandidateTransitionTest.cpp  VADDiagnosticTest.cpp  VADStateTransitionTest.cpp  VADThresholdTest.cpp  VioceActrivityDetectorTest.cpp  VoiceActivityDetectorTest.cpp  binary_compatibility_tests.cpp  dtw_tests.cpp  dtw_tests_unified.cpp  engine_tests.cpp  mfcc_tests.cpp  test_access_controller.cpp  test_access_controller_comprehensive.cpp  test_advanced_io_optimizer.cpp  test_audio_format_converter.cpp  test_audio_level_processor.cpp  test_audio_player.cpp  test_audit_logger.cpp  test_basic_coverage.cpp  test_calibration_grades.cpp  test_circular_audio_buffer.cpp  test_coaching_feedback.cpp  test_coverage_optimizer.cpp  test_cross_platform.cpp  test_crypto_manager.cpp  test_crypto_manager_comprehensive.cpp.disabled  test_debug_logger.cpp  test_dtw_comprehensive.cpp  test_edgecases.cpp  test_enhanced_multi_frame.cpp  test_enhanced_summary_staleness.cpp  (+42 more)
tests/user-acceptance/: ABTestingFramework.js  AnonymousAnalytics.js  UserTestingSession.js
tests/web/: audio-processing.test.js  performance.test.js  ui-interaction.test.js  wasm-loading.test.js
tools/: CMakeLists.txt  IOOptimizationDemo.cpp  MasterCallProcessor.cpp  analyze_recording.cpp  audio_trimmer.cpp  audio_visualization.cpp  debug_dtw_similarity.cpp  detailed_analysis.cpp  direct_component_coverage_test.cpp  find_best_match.cpp  generate_features.cpp  interactive_recorder.cpp  perf_smoke.cpp  performance_profiling_demo.cpp  phase_2_realtime_validation.cpp  phase_3_integration_validation.cpp  process_master_calls.cpp  real_engine_server.js  real_time_recording_monitor.cpp  setup_data_dirs.py  simple_unified_test.cpp  test_alpha_deployment_ready.cpp  test_cross_platform.cpp  test_harness.cpp  test_mfcc_consistency.cpp  test_mfcc_debugging.cpp  test_performance.cpp  test_recording.cpp  verify_processed_calls.cpp
tools/benchmarks/: micro_bench.cpp
tools/old/: audio_trimmer.cpp
(+933 files in other folders)
